eksdeployproject/addressbook/manifest/deployment.yaml
# Complete Manifest Where in single yml we defined Deployment & Service for SpringApp & PVC(with default  StorageClass),ReplicaSet & Service For Mongo.
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: directory
  name: addressbook
spec:
  replicas: 2
  selector:
    matchLabels:
      app: addressbook
  template:
    metadata:
      name: addressbook
      labels:
        app: addressbook
    spec:
      containers:
      - name: addressbook-container
        image: 548570664128.dkr.ecr.eu-west-2.amazonaws.com/addressbookapp:1.7.0
        ports:
        - containerPort: 8080
